2003 Mar 23

    * Added ApplicationScripting
    
2003 Mar 22

    * STEnvironment: includeBundle returns NO on failure
    * STScriptsManager: added method allScripts that returns all scripts for 
    domainand; added private method _scriptsAtPath: 
    * STScript: do not delete original extension when looking for script info
    file, so some.st will have some.st.stinfo; renamed localizedScriptName to
    localizedName
    * STLanguage: new methods: updateFileTypeDictionary and allKnownFileTypes

2003 Feb 21

    * StepTalk.h: Removed #import of STModule.h as it is no longer there

2003 Feb 11

    * Source/GNUmakefile: fixed installation of documentation
    
2003 Feb 4

    * STBundleInfo: warn instead of raise an exception if there is no scripting
    info class.

2003 Feb 3

    * Version 0.7.0

2003 Jan 30

    * STBundleInfo: Removed compiler warning
    * Modules/*: Cleanup for compiler warnings   

2003 Jan 29

    * Modules/ObjectiveC: fixed GNUmakefile to include source headers
    
2003 Jan 25

    * STBundleInfo: Fixed NSBundle stepTalkBundleNames to use .bundle file
    extension
    * Modules/*/GNUmakefile: Removed now unnecesary -lStepTalk, because modules
    do not have to be linked with StepTalk anymore

2003 Jan 25

    * Version 0.7.0pre1

2003 Jan 24

    * STBundleInfo: Use info from ScriptingInfo.plist instead of bundle's main
    info dictionary
    * Modules/*: Create ScriptingInfo.plist
    * Modules/GNUmakefile: Compile GDL2 module if it is available.

2003 Jan 22

    * STEnvironment: added includeBundle: method

2003 Jan 22

    * STModule: removed
    * STBundleInfo: added new class STBundleInfo and additional methods to 
    NSBundle
    * STEnvironment: reflect change from STModule to NSBundle/STBundleInfo;
    * Modules/*: reflect change from STModule to NSBundle/STBundleInfo

    IMPORTANT NOTE: You have to rebuild all modules, because the format has
    changed.

2003 Jan 22

    * NSNumber+additions: Added -modulo: method.